# ScoreOrganiser

./: .gitignore
cli/: Cargo.toml  test.csv
cli/src/: main.rs
client/: package-lock.json  package.json
client/src/: UI.css  UI.tsx  components.tsx  main.tsx  types.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: commands.rs  main.rs
client/src/components/: InfoBar.tsx  ReadingScores.tsx  SafmedScores.css  SafmedScores.tsx  ScoreTabs.css  ScoreTabs.tsx  StudentList.css  StudentList.tsx  WritingScores.tsx
client/src/components/dialogs/: AddStudent.tsx  DeleteStudent.tsx  EditStudent.tsx
client/src/styles/: AddStudent.css  SafmedScores.css
lib/: Cargo.toml
lib/_tests/: importer.rs  student_service.rs
lib/src/: constant.rs  errors.rs  importer.rs  lib.rs  plotter.rs  student_service.rs  useful.rs
lib/src/database/: dao.rs  mod.rs  sqlitedao.rs  value.rs
lib/src/models/: mod.rs  safmed_score.rs  student.rs
lib/src/models/scores/: mod.rs  safmed.rs
lib/src/services/: mod.rs  score.rs  student.rs
lib/src/services/scores/: mod.rs
lib/tests/: importer.rs  student_service.rs
scorg/: index.html  package-lock.json  package.json
scorg/src/: App.css  App.css.map  App.scss  App.tsx  Snackbar.css  Snackbar.tsx  main.tsx  snackbar-context.tsx
scorg/src-tauri/: Cargo.toml  tauri.conf.json
scorg/src-tauri/src/: main.rs
scorg/src/ScoreTabs/: SafmedContent.tsx  Score.tsx  ScoreTabs.tsx
scorg/src/StudentList/: Student.tsx  StudentList.tsx  StudentRow.tsx
scorg/src/StudentList/dialogs/: AddStudent.tsx  DeleteStudent.tsx  (+1 more)
