[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.27", features = ["derive"] }
log = "0.4.17"
scorg_lib = { version = "0.1.0", path = "../lib" }
simplelog = { version = "0.12.0", features = ["paris"] }
